--- a/examples/MaleconConverter/malecon.html
+++ b/examples/MaleconConverter/malecon.html
@@ -3459,7 +3459,7 @@
     viewer.loadSettingsFromURL();
     
     // Load point cloud
-    Potree.loadPointCloud('./pointclouds/malecon/metadata.json', 'malecon', e => {
+    Potree.loadPointCloud('../../pointsCloudOfficialFolder/malecon/metadata.json', 'malecon', e => {
       const pc = e.pointcloud;
       Object.assign(pc.material, {
         size: 1,
